Ajout librairie Animate on scroll

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>Foundation for Sites</title>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
   <body>
 
     {{> body}}
 
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="{{root}}assets/js/app.js"></script>
+    <script>
+        AOS.init();
+    </script>
   </body>
 </html>
