--- a/src/partials/building-blocks/platforms.html
+++ b/src/partials/building-blocks/platforms.html
@@ -1,8 +1,8 @@
 <div class="platforms">
   <div class="platforms__inner">
-    <div class="platforms__item platforms__item--apple-watch"><img class="platforms__item__image" src="assets/img/apple-watch.png" srcset="assets/img/apple-watch.png 1x, assets/img/apple-watch-2x.png 2x" alt=""/></div>
-    <div class="platforms__item platforms__item--nexus-6p"><img class="platforms__item__image" src="assets/img/nexus-6p.png" srcset="assets/img/nexus-6p.png 1x, assets/img/nexus-6p-2x.png 2x" alt=""/></div>
-    <div class="platforms__item platforms__item--iphone-6s"><img class="platforms__item__image" src="assets/img/iphone-6s.png" srcset="assets/img/iphone-6s.png 1x, assets/img/iphone-6s-2x.png 2x" alt=""/></div>
-    <div class="platforms__item platforms__item--ipad-air-2"><img class="platforms__item__image" src="assets/img/ipad-air-2.png" srcset="assets/img/ipad-air-2.png 1x, assets/img/ipad-air-2-2x.png 2x" alt=""/></div>
+    <div class="platforms__item platforms__item--apple-watch" data-aos="fade-up"><img class="platforms__item__image" src="assets/img/apple-watch.png" srcset="assets/img/apple-watch.png 1x, assets/img/apple-watch-2x.png 2x" alt=""/></div>
+    <div class="platforms__item platforms__item--nexus-6p" data-aos="fade-up"><img class="platforms__item__image" src="assets/img/nexus-6p.png" srcset="assets/img/nexus-6p.png 1x, assets/img/nexus-6p-2x.png 2x" alt=""/></div>
+    <div class="platforms__item platforms__item--iphone-6s" data-aos="fade-up"><img class="platforms__item__image" src="assets/img/iphone-6s.png" srcset="assets/img/iphone-6s.png 1x, assets/img/iphone-6s-2x.png 2x" alt=""/></div>
+    <div class="platforms__item platforms__item--ipad-air-2" data-aos="fade-up"><img class="platforms__item__image" src="assets/img/ipad-air-2.png" srcset="assets/img/ipad-air-2.png 1x, assets/img/ipad-air-2-2x.png 2x" alt=""/></div>
   </div>
 </div>
