--- a/src/partials/building-blocks/testimonial-cards.html
+++ b/src/partials/building-blocks/testimonial-cards.html
@@ -1,7 +1,7 @@
 <div class="grid-container margin-bottom-3">
     <div class="grid-x grid-margin-x large-up-2 xlarge-up-3">
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://source.unsplash.com/50x50/?random" class="rounded">
@@ -15,7 +15,7 @@
             <p>Sign up and quickly get up and running with examples, tutorials, documentation, and a helpful community</p>
         </div>
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://placeimg.com/50/50/any" class="rounded">
@@ -29,7 +29,7 @@
             <p>Sign up and quickly get up and running with examples, tutorials, documentation, and a helpful community</p>
         </div>
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://source.unsplash.com/50x50/?random" class="rounded">
@@ -43,7 +43,7 @@
             <p>Sign up and quickly get up and running with examples, tutorials, documentation, and a helpful community</p>
         </div>
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://placeimg.com/50/50/any" class="rounded">
@@ -57,7 +57,7 @@
             <p>Sign up and quickly get up and running with examples, tutorials, documentation, and a helpful community</p>
         </div>
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://source.unsplash.com/50x50/?random" class="rounded">
@@ -71,7 +71,7 @@
             <p>Sign up and quickly get up and running with examples, tutorials, documentation, and a helpful community</p>
         </div>
 
-        <div class="callout cell padding-2 border-none">
+        <div class="callout cell padding-2 border-none" data-aos="fade-up">
             <div class="card-header">
                 <div class="card-title">
                     <img src="https://placeimg.com/50/50/any" class="rounded">
