--- a/src/partials/building-blocks/txt-img.html
+++ b/src/partials/building-blocks/txt-img.html
@@ -1,5 +1,5 @@
 <div class="grid-x grid-margin-x align-middle">
-    <div class="cell medium-6 padding-right-2">
+    <div class="cell medium-6 padding-right-2" data-aos="fade-right">
         <h2>What Is Foundation?</h2>
         <p>A Framework for any device, medium, and accessibility. Foundation is a family of responsive front-end frameworks that make it easy to design beautiful responsive websites, apps and emails that look amazing on any device.</p>
     </div>
