--- a/src/partials/building-blocks/header-full-screen-color.html
+++ b/src/partials/building-blocks/header-full-screen-color.html
@@ -37,7 +37,7 @@
 
   <div class="middle-content-section" data-aos="zoom-in" data-aos-duration="500">
     <h1>Foundation</h1>
-    <p class="lead">The most advanced responsive  front-end framework in the world.</p>
+    <p class="subheading">The most advanced responsive  front-end framework in the world.</p>
     <button class="button success large">Download Foundation 6</button>
   </div>
 
