--- a/src/partials/building-blocks/hero-laptop.html
+++ b/src/partials/building-blocks/hero-laptop.html
@@ -2,7 +2,7 @@
     <div class="grid-x align-middle hero-container">
         <div class="cell large-6 text-container" data-aos="fade-right">
             <h2 class="h1">Get Started Now</h2>
-            <p class="lead">Download it and try it now!</p>
+            <p class="subheading">Download it and try it now!</p>
             <button class="button success large">Download Foundation 6</button>
         </div>
     </div>
