--- a/src/partials/building-blocks/testimonial-slider-txt.html
+++ b/src/partials/building-blocks/testimonial-slider-txt.html
@@ -13,7 +13,7 @@
           <p class="h3 text-center margin-vertical-1">It Helps Me Personalize Service</p>
           <div class="grid-x grid-margin-x align-middle testimonial-slide-content">
             <div class="cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <p class="testimonial-slide-author-info">– Fleas Witherspoon • <i class="subheader">Cat World Inc.</i></p>
               </div>
@@ -31,7 +31,7 @@
           <p class="h3 text-center margin-vertical-1">It Helps Me Personalize Service</p>
           <div class="grid-x grid-margin-x align-middle testimonial-slide-content">
             <div class="cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <p class="testimonial-slide-author-info">– Fleas Witherspoon • <i class="subheader">Cat World Inc.</i></p>
               </div>
@@ -49,7 +49,7 @@
           <p class="h3 text-center margin-vertical-1">It Helps Me Personalize Service</p>
           <div class="grid-x grid-margin-x align-middle testimonial-slide-content">
             <div class="cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <p class="testimonial-slide-author-info">– Fleas Witherspoon • <i class="subheader">Cat World Inc.</i></p>
               </div>
@@ -67,7 +67,7 @@
           <p class="h3 text-center margin-vertical-1">It Helps Me Personalize Service</p>
           <div class="grid-x grid-margin-x align-middle testimonial-slide-content">
             <div class="cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <p class="testimonial-slide-author-info">– Fleas Witherspoon • <i class="subheader">Cat World Inc.</i></p>
               </div>
