--- a/src/partials/building-blocks/features-3.html
+++ b/src/partials/building-blocks/features-3.html
@@ -1,20 +1,20 @@
 <section class="section grid-container text-center">
-  <h2 class="margin-bottom-0">Build products, apps and services</h2>
-  <p class="lead margin-bottom-2">Foundation is the professional choice for designers, developers and teams.</p>
+  <h2 class="h1 margin-bottom-0">Build products, apps and services</h2>
+  <p class="subheading margin-bottom-2">Foundation is the professional choice for designers, developers and teams.</p>
   <div class="grid-x grid-margin-x margin-bottom-3">
     <div class="cell medium-4" data-aos="fade-up" data-aos-duration="800">
       <i class="fas fa-code fa-3x margin-vertical-1"></i>
-      <h3>Semantic</h3>
+      <h3 class="h2">Semantic</h3>
       <p>Everything is semantic. You can have the cleanest markup without sacrificing the utility and speed of Foundation.</p>
     </div>
     <div class="cell medium-4" data-aos="fade-up" data-aos-duration="800">
       <i class="fas fa-mobile-alt fa-3x margin-vertical-1"></i>
-      <h3>Mobile First</h3>
+      <h3 class="h2">Mobile First</h3>
       <p>You can build for small devices first. Then, as devices get larger and larger, layer in more complexity for a complete responsive design.</p>
     </div>
     <div class="cell medium-4" data-aos="fade-up" data-aos-duration="800">
       <i class="fas fa-cogs fa-3x margin-vertical-1"></i>
-      <h3>Customizable</h3>
+      <h3 class="h2">Customizable</h3>
       <p>You can customize your build to include or remove certain elements, as well as define the size of columns, colors, font size and more.</p>
     </div>
   </div>
