--- a/src/partials/building-blocks/testimonial-slider-img.html
+++ b/src/partials/building-blocks/testimonial-slider-img.html
@@ -15,7 +15,7 @@
               <img src="https://placeimg.com/300/300/nature">
             </div>
             <div class="small-12 medium-8 cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <div class="small-profile-pic hide-for-medium">
                   <img src="https://placeimg.com/50/50/nature">
@@ -38,7 +38,7 @@
               <img src="https://placeimg.com/300/300/architecture">
             </div>
             <div class="small-12 medium-8 cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <div class="small-profile-pic hide-for-medium">
                   <img src="https://placeimg.com/50/50/architecture">
@@ -61,7 +61,7 @@
               <img src="https://placeimg.com/300/300/animals">
             </div>
             <div class="small-12 medium-8 cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <div class="small-profile-pic hide-for-medium">
                   <img src="https://placeimg.com/50/50/animals">
@@ -84,7 +84,7 @@
               <img src="https://placeimg.com/300/300/any">
             </div>
             <div class="small-12 medium-8 cell testimonial-slide-text">
-              <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+              <p class="subheading">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
               <div class="testimonial-slide-author-container">
                 <div class="small-profile-pic hide-for-medium">
                   <img src="https://placeimg.com/50/50/any">
